fixing bootstrap on mobile view

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -44,7 +44,7 @@
  div .col-xs-12{
    font-family: Avenir;
    font-size: 16px;
-   color: red;
+   color: white;
  }
 
 /* STYLES in views/index.html*/
